--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.27.0"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "react-router-dom": "^6.27.0",
+    "tailwindcss": "^3.4.14"
   }
 }
